--- a/pago.html
+++ b/pago.html
@@ -573,7 +573,7 @@
         }
 
         // Llamar la función al cargar la página
-        guardarContactosPorDefecto();
+        // guardarContactosPorDefecto();
     </script>
 </body>
 
