--- a/h.html
+++ b/h.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="./css/movimiento.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-
+  <link rel="stylesheet" href="./css/h.css">
 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -39,510 +38,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
 
-  <style>
-    :root {
-      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Helvetica, Arial, sans-serif;
-    }
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Helvetica, Arial, sans-serif;
-      background: white;
-      height: 100vh;
-      width: 100%;
-      margin: 0%;
-      position: relative;
-      overflow-x: hidden;
-      color: white;
-    }
-
-    /* Header container original */
-    .header-container {
-      position: relative;
-      width: 100%;
-      height: 340px;
-      overflow: hidden;
-    }
-
-    .svg-header-morado {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-    }
-
-    .svg-header-rosado {
-      position: absolute;
-      top: 240px;
-      /* <- para que quede justo debajo del morado */
-      left: 0;
-      width: 100%;
-      height: 100px;
-      z-index: 1;
-      /* detrás del contenido, pero visible */
-    }
-
-    .svg-header-rosado polygon {
-      fill: #ff1493;
-    }
-
-    .content {
-      position: relative;
-      z-index: 2;
-      color: white;
-      padding: 25px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .top-bar {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .avatar {
-      width: 35px;
-      height: 35px;
-      background: #4a2d5d;
-      border-radius: 8px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-right: 10px;
-    }
-
-    .saludo {
-      display: flex;
-      align-items: center;
-      font-size: 14px;
-    }
-
-    .iconos {
-      display: flex;
-      gap: 12px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    .saldo {
-      text-align: center;
-      margin-top: 25px;
-    }
-
-    .saldo h2 {
-      font-size: 31px;
-      margin: 1px 0;
-      font-family: "Outfit", sans-serif;
-      font-weight: 450;
-    }
-
-    .btn-plata {
-      margin-top: 10px;
-      padding: 2px 20px;
-      border-radius: 5px;
-      background: transparent;
-      border: 1px solid white;
-      color: white;
-      font-weight: bold;
-      font-size: 14px;
-      cursor: pointer;
-    }
-
-    .eye-button {
-      cursor: pointer;
-      vertical-align: middle;
-    }
-
-    /* Content section mejorada */
-    .content-section {
-      background: transparent;
-      margin-top: -100px;
-      /* padding: 28px 24px 120px; */
-      position: relative;
-     
-    }
-
-    .favorites-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 24px;
-    }
-
-    .favorites-title {
-      font-size: 18px;
-      font-weight: 600;
-      color: #2d3748;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .edit-button {
-      width: 36px;
-      height: 36px;
-      background: #2d3748;
-      border-radius: 8px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      cursor: pointer;
-      transition: all 0.2s ease;
-    }
-
-    .edit-button:hover {
-      background: #4a5568;
-      transform: scale(1.05);
-    }
-
-    /* Services grid mejorada */
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 20px;
-      margin-bottom: 32px;
-    }
-
-    .service-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-      background-color: white;
-    }
-
-    .service-item:hover {
-      transform: translateY(-2px);
-    }
-
-    .service-icon {
-      width: 100px;
-      height: 100px;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 5px;
-      font-size: 24px;
-      font-weight: 700;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
-      transition: all 0.2s ease;
-      background-color: white;
-    }
-
-    .service-icon:hover {
-      transform: scale(1.05);
-    }
-
-    .service-icon.negocio {
-      background: white;
-      border: none;
-      color: black;
-    }
-
-    .service-icon.llaves {
-      background: white;
-      border: none;
-      color: white;
-    }
-
-    .service-icon.wom {
-      background: white;
-      border: none;
-      color: rgb(100, 1, 105);
-    }
-
-    .service-icon.creditos {
-      background: white;
-      border: none;
-      color: #ff1493;
-    }
-
-    .service-name {
-      font-size: 13px;
-      font-weight: 500;
-      color: #4a5568;
-      line-height: 1.3;
-    }
-
-    /* Suggestions section */
-    .suggestions-section {
-      margin-top: 24px;
-    }
-
-    .suggestions-title {
-      font-size: 16px;
-      font-weight: 600;
-      color: #4a5568;
-      margin-bottom: 20px;
-    }
-
-    /* Bottom Navigation mejorada */
-    .seccion {
-      display: none;
-    }
-
-    .seccion.activa {
-      display: block;
-    }
-
-
-
-
-
-
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      max-width: 400px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 5px 10px;
-      background-color: rgba(255, 255, 255, 0.85);
-      backdrop-filter: blur(20px);
-      z-index: 2;
-    }
-
-    .menuuuu {
-      display: flex;
-      flex: 1;
-      justify-content: space-around;
-      background-color: white;
-      border-radius: 12px;
-      box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
-      padding: 8px 10px;
-      margin-right: 12px;
-    }
-
-    .nav-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 4px;
-      cursor: pointer;
-      padding: 6px 10px;
-      color: #000; /* texto por defecto */
-      border-radius: 8px;
-      transition: all 0.2s ease;
-    }
-
-    .nav-item i {
-      color: #bbb; /* ícono gris por defecto */
-      font-size: 18px;
-      transition: color 0.2s ease;
-    }
-
-    .nav-item.active {
-      background-color: rgb(248, 237, 246);
-      color: #000;
-    }
-
-    .nav-item.active i {
-      color: #000; /* ícono negro cuando activo */
-    }
-
-    .nav-label {
-      font-size: 11px;
-      font-weight: 500;
-    }
-
-    .money-button {
-      width: 56px;
-      height: 56px;
-      background: #fd108e;
-      border: none;
-      border-radius: 12px;
-      color: white;
-      font-size: 28px;
-      font-weight: 500;
-      cursor: pointer;
-      box-shadow: 0 4px 16px rgba(255, 20, 147, 0.3);
-      transition: all 0.2s ease;
-    }
-
-    .money-button:hover {
-      transform: scale(1.05);
-    }
-
-
-
-
-
-
-
-
-    /* Responsive */
-    @media (max-width: 380px) {
-      .balance-amount {
-        font-size: 42px;
-      }
-
-      .services-grid {
-        gap: 16px;
-      }
-
-      .service-icon {
-        width: 56px;
-        height: 56px;
-        font-size: 20px;
-      }
-
-      .content {
-        padding: 16px 20px;
-      }
-
-      .content-section {
-        padding: 24px 20px 120px;
-      }
-    }
-
-    .services-grid {
-      display: flex;
-      gap: 15px;
-      padding: 10px 0;
-      margin-bottom: 30px;
-    }
-
-    .scroll-container {
-      /* Configuración del scroll horizontal */
-      overflow-x: auto;
-      overflow-y: hidden;
-
-      /* Hacer que la barra de scroll siempre sea visible */
-      scrollbar-width: thin;
-      scrollbar-color: transparent;
-
-      /* Para navegadores webkit (Chrome, Safari) */
-      -webkit-overflow-scrolling: touch;
-    }
-
-    /* Estilos personalizados para la barra de scroll en navegadores webkit */
-    .scroll-container::-webkit-scrollbar {
-      height: 8px;
-    }
-
-    .scroll-container::-webkit-scrollbar-track {
-      background: transparent;
-      border-radius: 4px;
-    }
-
-    .scroll-container::-webkit-scrollbar-thumb {
-      background: transparent;
-      border-radius: 4px;
-    }
-
-    .scroll-container::-webkit-scrollbar-thumb:hover {
-      background: transparent;
-    }
-
-    .service-item {
-      flex: 0 0 auto;
-      width: 120px;
-      text-align: center;
-      background: transparent;
-      border-radius: 10px;
-      /* padding: 15px; */
-      transition: transform 0.2s ease;
-      cursor: pointer;
-    }
-
-    /* .service-item:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        } */
-
-    .service-name {
-      font-size: 12px;
-      font-weight: 500;
-      color: #333;
-      margin-top: 8px;
-    }
-
-    .suggestions-section {
-      margin-top: 20px;
-    }
-
-    .suggestions-title {
-      font-size: 16px;
-      font-weight: bold;
-      margin-bottom: 15px;
-      color: #666;
-    }
-
-    /* Indicador visual de que se puede hacer scroll */
-    .scroll-container {
-      display: flex;
-      overflow-x: auto;
-      gap: 0%;
-      padding: 0px;
-      position: relative;
-      scroll-behavior: smooth;
-      -ms-overflow-style: none;
-      /* IE y Edge */
-      scrollbar-width: none;
-      /* Firefox */
-      margin-bottom: -20px;
-      margin-top: -10px;
-    }
-
-    .scroll-container::-webkit-scrollbar {
-      display: none;
-      /* Chrome, Safari */
-    }
-
-    .scroll-container::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 20px;
-      height: 100%;
-
-      pointer-events: none;
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .service-item {
-        width: 90px;
-        padding: 12px;
-      }
-
-      .service-icon {
-        width: 60px;
-        height: 60px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      }
-
-      .service-icon img {
-        max-width: 250%;
-        max-height: 250%;
-      }
-
-      .service-name {
-        font-size: 11px;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -681,32 +177,25 @@
         <div class="service-name">Créditos</div>
       </div>
     </div>
-
+    <!-- second sceroll -->
+     <!-- Algunos se ven desproporcionados pero es por los margenes de las imagenes -->
     <div class="suggestions-section">
       <div class="suggestions-title">Sugeridos Nequi</div>
       <div class="services-grid scroll-container">
         <div class="service-item">
-          <div class="service-icon negocio">
-            <img width="90" height="90" src="./ico/Minegocio.svg" alt="" />
-          </div>
+          <img width="90" height="90" src="./ico/Minegocio.svg" alt="" />
           <div class="service-name">Mi Negocio</div>
         </div>
         <div class="service-item">
-          <div class="service-icon wom">
-            <img width="50" src="./ico/WOM_Chile.svg.png" alt="" />
-          </div>
+          <img width="50" src="./ico/WOM_Chile.svg.png" alt="" />
           <div class="service-name">WOM</div>
         </div>
         <div class="service-item">
-          <div class="service-icon llaves">
-            <img src="./ico/Mesa de trabajo 6.svg" alt="" />
-          </div>
+          <img src="./ico/Mesa de trabajo 6.svg" alt="" />
           <div class="service-name">Tus llaves</div>
         </div>
         <div class="service-item">
-          <div class="service-icon creditos">
-            <img src="./ico/Creeditos.svg" alt="" />
-          </div>
+          <img src="./ico/Creeditos.svg" alt="" />
           <div class="service-name">Créditos</div>
         </div>
       </div>
