--- a/h.html
+++ b/h.html
@@ -154,7 +154,7 @@
     <div class="services-grid scroll-container">
       <div class="service-item">
         <div class="service-icon negocio">
-          <img width="100" height="100" src="./ico/Minegocio.svg" alt="" />
+          <img width="250" height="250" src="./ico/Minegocio.svg" alt="" />
         </div>
         <div class="service-name">Mi Negocio</div>
       </div>
@@ -183,21 +183,32 @@
       <div class="suggestions-title">Sugeridos Nequi</div>
       <div class="services-grid scroll-container">
         <div class="service-item">
-          <img width="90" height="90" src="./ico/Minegocio.svg" alt="" />
-          <div class="service-name">Mi Negocio</div>
+        <div class="service-icon1 llaves" style="background-color: transparent;">
+          <img width="50" height="50" src="./ico/Mesa de trabajo 6.svg" alt="" />
         </div>
-        <div class="service-item">
-          <img width="50" src="./ico/WOM_Chile.svg.png" alt="" />
-          <div class="service-name">WOM</div>
+        <div class="service-name">Tus llaves</div>
+      </div>
+         <div class="service-item">
+        <div class="service-icon1 creditos">
+          <img width="50" height="50" src="./ico/Creeditos.svg" alt="" />
         </div>
-        <div class="service-item">
-          <img src="./ico/Mesa de trabajo 6.svg" alt="" />
-          <div class="service-name">Tus llaves</div>
+        <div class="service-name">Créditos</div>
+      </div>
+         <div class="service-item">
+        <div class="service-icon1 wom">
+          <img width="30" height="30" src="./ico/WOM_Chile.svg.png" alt="" />
         </div>
-        <div class="service-item">
-          <img src="./ico/Creeditos.svg" alt="" />
-          <div class="service-name">Créditos</div>
+        <div class="service-name">WOM</div>
+      </div>
+   
+       <div class="service-item">
+        <div class="service-icon1 negocio">
+          <img width="50" height="50" src="./ico/Minegocio.svg" alt="" />
         </div>
+        <div class="service-name">Mi Negocio</div>
+      </div>
+      
+     
       </div>
     </div>
   </div>
