Cambios minimos al css

--- a/b.html
+++ b/b.html
@@ -265,23 +265,32 @@
       </div>
 <!--  Second Overdlow-->
     <div class="suggestions-section">
-      <h2 class="suggestions-title">Sugeridos Nequi</h2>
-      <div class="services-grid">
-        <div class="service-item">
-          <img src="./ico/Minegocio.svg" alt="Mi Negocio" width="90" height="90" />
-          <div class="service-name">Mi Negocio</div>
-        </div>
-        <div class="service-item">
-          <img src="./ico/WOM_Chile.svg.png" alt="WOM" width="50" />
-          <div class="service-name">WOM</div>
-        </div>
-        <div class="service-item">
-          <img src="./ico/Mesa de trabajo 6.svg" alt="Tus llaves" />
-          <div class="service-name">Tus llaves</div>
-        </div>
-        <div class="service-item">
-          <img src="./ico/Creeditos.svg" alt="Créditos" />
-          <div class="service-name">Créditos</div>
+        <div class="suggestions-title">Sugeridos Nequi</div>
+        <div class="services-grid">
+          <div class="service-item">
+            <div class="service-icon negocio none-shacow">
+              <img width="90" height="90" src="./ico/Minegocio.svg" alt="" />
+            </div>
+            <div class="service-name">Mi Negocio</div>
+          </div>
+          <div class="service-item">
+            <div class="service-icon wom none-shacow">
+              <img width="50" src="./ico/WOM_Chile.svg.png" alt="" />
+            </div>
+            <div class="service-name">WOM</div>
+          </div>
+          <div class="service-item">
+            <div class="service-icon llaves none-shacow">
+              <img src="./ico/Mesa de trabajo 6.svg" alt="" />
+            </div>
+            <div class="service-name">Tus llaves</div>
+          </div>
+          <div class="service-item">
+            <div class="service-icon creditos none-shacow">
+              <img src="./ico/Creeditos.svg" alt="" />
+            </div>
+            <div class="service-name">Créditos</div>
+          </div>
         </div>
       </div>
     </div>
