--- a/h.html
+++ b/h.html
@@ -179,24 +179,33 @@
     </div>
     <!-- second sceroll -->
      <!-- Algunos se ven desproporcionados pero es por los margenes de las imagenes -->
-    <div class="suggestions-section">
-      <div class="suggestions-title">Sugeridos Nequi</div>
-      <div class="services-grid scroll-container">
-        <div class="service-item">
-          <img width="90" height="90" src="./ico/Minegocio.svg" alt="" />
-          <div class="service-name">Mi Negocio</div>
-        </div>
-        <div class="service-item">
-          <img width="50" src="./ico/WOM_Chile.svg.png" alt="" />
-          <div class="service-name">WOM</div>
-        </div>
-        <div class="service-item">
-          <img src="./ico/Mesa de trabajo 6.svg" alt="" />
-          <div class="service-name">Tus llaves</div>
-        </div>
-        <div class="service-item">
-          <img src="./ico/Creeditos.svg" alt="" />
-          <div class="service-name">Créditos</div>
+        <div class="suggestions-section">
+        <div class="suggestions-title">Sugeridos Nequi</div>
+        <div class="services-grid">
+          <div class="service-item">
+            <div class="service-icon negocio none-shacow">
+              <img width="90" height="90" src="./ico/Minegocio.svg" alt="" />
+            </div>
+            <div class="service-name">Mi Negocio</div>
+          </div>
+          <div class="service-item">
+            <div class="service-icon wom none-shacow">
+              <img width="50" src="./ico/WOM_Chile.svg.png" alt="" />
+            </div>
+            <div class="service-name">WOM</div>
+          </div>
+          <div class="service-item">
+            <div class="service-icon llaves none-shacow">
+              <img src="./ico/Mesa de trabajo 6.svg" alt="" />
+            </div>
+            <div class="service-name">Tus llaves</div>
+          </div>
+          <div class="service-item">
+            <div class="service-icon creditos none-shacow">
+              <img src="./ico/Creeditos.svg" alt="" />
+            </div>
+            <div class="service-name">Créditos</div>
+          </div>
         </div>
       </div>
     </div>
